core/codegen/tests/ui-fail-nightly/catch.stderr
error: expected `fn`
 --> $DIR/catch.rs:6:1
  |
6 | struct Catcher(String);
  | ^^^^^^
  |
  = help: `#[catch]` can only be used on functions

error: expected `fn`
 --> $DIR/catch.rs:9:7
  |
9 | const CATCH: &str = "Catcher";
  |       ^^^^^
  |
  = help: `#[catch]` can only be used on functions

error: invalid value: expected unsigned integer literal
  --> $DIR/catch.rs:11:9
   |
11 | #[catch("404")]
   |         ^^^^^
   |
   = help: `#[catch]` expects a single status integer, e.g.: #[catch(404)]

error: unexpected keyed parameter: expected literal or identifier
  --> $DIR/catch.rs:14:9
   |
14 | #[catch(code = "404")]
   |         ^^^^^^^^^^^^
   |
   = help: `#[catch]` expects a single status integer, e.g.: #[catch(404)]

error: unexpected keyed parameter: expected literal or identifier
  --> $DIR/catch.rs:17:9
   |
17 | #[catch(code = 404)]
   |         ^^^^^^^^^^
   |
   = help: `#[catch]` expects a single status integer, e.g.: #[catch(404)]

error: status must be in range [100, 599]
  --> $DIR/catch.rs:20:9
   |
20 | #[catch(99)]
   |         ^^
   |
   = help: `#[catch]` expects a single status integer, e.g.: #[catch(404)]

error: status must be in range [100, 599]
  --> $DIR/catch.rs:23:9
   |
23 | #[catch(600)]
   |         ^^^
   |
   = help: `#[catch]` expects a single status integer, e.g.: #[catch(404)]

error: unexpected attribute parameter: `message`
  --> $DIR/catch.rs:26:14
   |
26 | #[catch(400, message = "foo")]
   |              ^^^^^^^^^^^^^^^
   |
   = help: `#[catch]` expects a single status integer, e.g.: #[catch(404)]

error: invalid number of arguments: must be zero or one
  --> $DIR/catch.rs:30:6
   |
30 | fn f3(_request: &Request, other: bool) { }
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: catchers may optionally take an argument of type `&Request`

warning: unused import: `rocket::Request`
 --> $DIR/catch.rs:3:5
  |
3 | use rocket::Request;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
